feat: sample processing contact history data & optional birthDates
chore : remove LOAD_CONTEXT job